Update business strategies blog

--- a/blog-3.html
+++ b/blog-3.html
@@ -153,7 +153,6 @@ permalink: /blog-3/
         <div class="hero center">
             <div class="container-1140">
                 <h1>Sybiltec's Blog Page 3</h1>
-                <h2>Keeping You Updated</h2>
             </div>
         </div>
         <div class="main section">
@@ -167,10 +166,16 @@ permalink: /blog-3/
                         Sybiltec's Blog Page 3
                     </li>
                 </ol>
-                <h2>The Importance of Contact Information on Your Website</h2>
-                <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
+                <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
+                <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
                 <br>
-                <a class="btn-secondary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info >></a>
+                <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately >></a>
+                <div class="padding-top">
+                    <h2>The Importance of Contact Information on Your Website</h2>
+                    <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info >></a>
+                </div>
                 <div class="padding-top">
                     <h2>How Does a Good Website Showcase Trust?</h2>
                     <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
