--- a/index.html
+++ b/index.html
@@ -277,6 +277,18 @@
                     <p>Read our selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
+                    <div class="col-3"> 
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/strategies-for-business-success/">
+                                <img src="https://sybiltec.com/images/black-lady-working-laptop-her-office-400x209.jpg" 
+                                alt="Black lady working on a laptop in her office"></a>
+                            <div class="blog-card-text">                    
+                                <a href="https://sybiltec.com/strategies-for-business-success/" class="blog-title">Smart Strategies for Small Business Success</a>
+                                <p>18 June 2024</p>
+                                <p>We explore the critical strategies that transform your website into a robust platform for growth.</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-3">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/website-compliance-quick-guide/"><img src="https://sybiltec.com/images/wooden-gavel-sitting-on-computer-keyboard.jpg" alt="Wooden gavel sitting on computer keyboard"></a>
@@ -306,18 +318,6 @@
                                 <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/" class="blog-title">8 Ways to Speed Up Your Windows PC</a>
                                 <p>17 April 2024</p>
                                 <p>Are you suffering from a slow PC? Read our latest post on how to make your computer or laptop run faster.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3"> 
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/user-experience-ux/">
-                                <img src="https://sybiltec.com/images/white-and-black-laptop-400x209.jpg" 
-                                alt="White and black laptop"></a>
-                            <div class="blog-card-text">                    
-                                <a href="https://sybiltec.com/user-experience-ux/" class="blog-title">9 Ways to Improve the UX of Your Website</a>
-                                <p>19 March 2024</p>
-                                <p>Good user experience is the key to a successful website. Read our blog article for helpful tips.</p>
                             </div>
                         </div>
                     </div>
