--- a/sitemap.html
+++ b/sitemap.html
@@ -219,6 +219,7 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a></li>
                     <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website/">The Importance of Contact Information on Your Website</a></li>
                     <li><a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a></li>   
+                    <li><a href="https://sybiltec.com/strategies-for-business-success/">Thriving Through Change: Smart Website Strategies for Small Business Success</a></li>
                 </ul>
             </div>
         </div>
