--- a/blog-2.html
+++ b/blog-2.html
@@ -153,7 +153,6 @@ permalink: /blog-2/
         <div class="hero center">
             <div class="container-1140">
                 <h1>Sybiltec's Blog Page 2</h1>
-                <h2>Keeping You Updated</h2>
             </div>
         </div>
         <div class="main section">
@@ -167,10 +166,16 @@ permalink: /blog-2/
                         Sybiltec's Blog Page 2
                     </li>
                 </ol>
-                <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
-                <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
-                <br>
-                <a class="btn-secondary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">Backup Your Website >></a>
+                <h2>How to Improve the SEO of Your Website</h2>
+                    <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO >></a>
+                <div class="padding-top">
+                    <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
+                    <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">Backup Your Website >></a>
+                </div>
                 <div class="padding-top">
                     <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
                     <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
@@ -218,12 +223,6 @@ permalink: /blog-2/
                     <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
                     <br>
                     <a class="btn-secondary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">Update WordPress >></a>
-                </div>
-                <div class="padding-top">
-                    <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
-                    <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
-                    <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately >></a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog/">Page 1</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
