--- a/blog.html
+++ b/blog.html
@@ -153,7 +153,6 @@ permalink: /blog/
         <div class="hero center">
             <div class="container-1140">
                 <h1>Sybiltec's Blog</h1>
-                <h2>Keeping You Updated</h2>
             </div>
         </div>
         <div class="main section">
@@ -167,10 +166,16 @@ permalink: /blog/
                         Sybiltec's Blog
                     </li>
                 </ol>
-                <h2>A Quick Guide to Website Compliance</h2>
-                <p>Is your website compliant? As a business owner, there are certain legal requirements that your website must meet. In this article, we discuss accessibility regulations (WCAG), data protection regulations (GDPR) and other UK laws. …</p>
-                <br>
-                <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Is Your Website Compliant? >></a>
+                <h2>Thriving Through Change: Smart Website Strategies for Small Business Success</h2>
+                <p>In the digital age, a well-optimised website is more than just a business card; it's a powerful tool to ensure the success and resilience of your business during uncertain times. We explore the critical strategies that can transform your website into a robust platform for growth. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Explore Website Strategies >></a>
+                <div class="padding-top">
+                    <h2>A Quick Guide to Website Compliance</h2>
+                    <p>Is your website compliant? As a business owner, there are certain legal requirements that your website must meet. In this article, we discuss accessibility regulations (WCAG), data protection regulations (GDPR) and other UK laws. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Is Your Website Compliant? >></a>
+                </div>
                 <div class="padding-top">
                     <h2>Cyber Security Best Practices for Business</h2>
                     <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips and advice in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. …</p>
@@ -218,12 +223,6 @@ permalink: /blog/
                     <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
                     <br>
                     <a class="btn-secondary" href="https://sybiltec.com/how-to-choose-web-designer/">Choose a Web Designer >></a>
-                </div>
-                <div class="padding-top">
-                    <h2>How to Improve the SEO of Your Website</h2>
-                        <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
-                        <br>
-                        <a class="btn-secondary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO >></a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
