Fix broken links/images

--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -429,7 +429,7 @@ permalink: /web-design-bexley/
             <div class="row">
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/logos/ld-tiling-contractors.png" class="avatar" alt="LD Tiling Contractors">
+                        <img src="https://sybiltec.com/images/logos/ld-tiling-contractors.png" class="avatar" alt="LD Tiling Contractors">
                         <p><strong><em>Natalie Wright, Finance Director, LD Tiling Contractors</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
@@ -443,7 +443,7 @@ permalink: /web-design-bexley/
                 </div>
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/logos/happily-clappily-ever-laughter-logo.png" class="avatar" alt="Happily Clappily Ever Laughter">
+                        <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" class="avatar" alt="Happily Clappily Ever Laughter">
                         <p><strong><em>Patricia Byrne, CEO, Happily Clappily Ever Laughter</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
@@ -457,7 +457,7 @@ permalink: /web-design-bexley/
                 </div>
                 <div class="col-4">
                     <div class="testimonial-card">
-                        <img src="images/logos/the-bamboo-wardrobe-logo.png" class="avatar" alt="The Bamboo Wardrobe">
+                        <img src="https://sybiltec.com/images/logos/the-bamboo-wardrobe-logo.png" class="avatar" alt="The Bamboo Wardrobe">
                         <p><strong><em>Caroline Wardell, Founder, The Bamboo Wardrobe</em></strong></p>
                         <div class="stars">
                             <img class="star" src="images/star.png">
