--- a/training.html
+++ b/training.html
@@ -170,7 +170,7 @@ permalink: /training/
                 <p>We are available to facilitate your workshop or webinar. Here are some examples of events we've taken part in previously.</p>
                 <h2>Workshops</h2>
                 <div class="row">
-                    <div class="col-6"><div><img src="images/e-commerce-deep-dive-selling-your-products-online.jpg" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
+                    <div class="col-6"><div><img src="https://sybiltec.com/images/e-commerce-deep-dive-selling-your-products-online.jpg" style="width:100%; max-width:560px;" alt="E-commerce deep dive: selling your products online"></div></div>
                     <div class="col-6"><p>On 09 July 2024, Sybil presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>. This workshop was organised by Start Up Greenwich.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/e-commerce-deep-dive-selling-your-products-online-tickets-899935169317" target="_blank" rel="noopener noreferrer">E-commerce Deep Dive >></a></div></div>
                 </div>
 
