--- a/website-design.html
+++ b/website-design.html
@@ -197,6 +197,27 @@ permalink: /website-design/
                 <h2>Web Design Clients</h2>
                 <p>Take a look at the examples below of websites I have designed for past clients. All of these clients benefitted from a bespoke website design which allowed the businesses to showcase their products and services at their best.</p>
 
+                <div id="bexley-linkup" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/bexley-linkup.jpg" alt="Bexley Linkup">
+                        </div>
+                        <div class="col-7">
+                            <h2>Bexley Linkup</h2>
+                            <h3 style="font-size: 18px;">Connecting businesses for success</h3>
+                            <ul>
+                                <li>Website design and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://bexleylinkup.co.uk/" 
+                                target="_blank" rel="noopener noreferrer">Bexley Linkup >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
