--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -197,16 +197,18 @@ permalink: /web-design-bexley/
                     <li>Access to an online portal for useful information and resources</li>
                 </ul>
 
-                <h2>How it Works</h2>
-
-                <ol>
-                    <li>Submit your application</li>
-                    <li>Complete your Action Plan</li>
-                    <li>Complete 6 hours of business support</li>
-                    <li>Attend a networking event</li>
-                    <li>Receive your certificate</li>
-                    <li>Get subsidised web design services</li>
-                </ol>
+                <div class="center padding-top padding-bottom">
+                    <h2>How it Works</h2>
+                    <hr>
+                    <div class="row padding-top">
+                        <div class="col-2"><i class="fa-regular fa-circle-check"></i><p><strong>Submit your application</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-list-check"></i><p><strong>Complete your Action Plan</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-user-group"></i><p><strong>Complete 6 hours of business support</strong></p></div>
+                        <div class="col-2"><i class="fa-regular fa-handshake"></i><p><strong>Attend a networking event</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-award"></i><p><strong>Receive your certificate</strong></p></div>
+                        <div class="col-2"><i class="fa-solid fa-laptop"></i><p><strong>Get subsidised web design services</strong></p></div>
+                    </div>
+                </div>
 
                 <h2>What You Gain</h2>
                 <p>Once you have attended 6 hours of sessions (these can be 1-2-1 or group sessions, or a combination of both) you will be issued with a Certificate of Completion. You'll also be invited to attend a closing in-person celebratory event where you'll have the opportunity to network with other graduates of the programme.</p>
@@ -233,6 +235,27 @@ permalink: /web-design-bexley/
 
                 <h2>Web Design Clients in Bexley</h2>
                 <p>Take a look at a selection of businesses whom we have worked with previously:</p>
+
+                <div id="bexley-linkup" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/bexley-linkup.jpg" alt="Bexley Linkup">
+                        </div>
+                        <div class="col-7">
+                            <h2>Bexley Linkup</h2>
+                            <h3 style="font-size: 18px;">Connecting businesses for success</h3>
+                            <ul>
+                                <li>Website design and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://bexleylinkup.co.uk/" 
+                                target="_blank" rel="noopener noreferrer">Bexley Linkup >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div id="ld-tiling-contractors" class="shadow-box-2">
                     <div class="row-2">
@@ -432,11 +455,11 @@ permalink: /web-design-bexley/
                         <img src="https://sybiltec.com/images/logos/ld-tiling-contractors.png" class="avatar" alt="LD Tiling Contractors">
                         <p><strong><em>Natalie Wright, Finance Director, LD Tiling Contractors</em></strong></p>
                         <div class="stars">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
                         </div>
                         <p>What fantastic service we received from Sybil at Sybiltec, always professional and nothing is too much trouble. Couldn't recommend her enough!</p>
                     </div>
@@ -446,11 +469,11 @@ permalink: /web-design-bexley/
                         <img src="https://sybiltec.com/images/logos/happily-clappily-ever-laughter-logo.png" class="avatar" alt="Happily Clappily Ever Laughter">
                         <p><strong><em>Patricia Byrne, CEO, Happily Clappily Ever Laughter</em></strong></p>
                         <div class="stars">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
                         </div>
                         <p>Sybil is one of those people who are very rare! She is a gem! Not only does Sybil create beautiful websites-they are EXACTLY in detail-what you ask for!</p>
                     </div>
@@ -460,11 +483,11 @@ permalink: /web-design-bexley/
                         <img src="https://sybiltec.com/images/logos/the-bamboo-wardrobe-logo.png" class="avatar" alt="The Bamboo Wardrobe">
                         <p><strong><em>Caroline Wardell, Founder, The Bamboo Wardrobe</em></strong></p>
                         <div class="stars">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
-                            <img class="star" src="images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
+                            <img class="star" src="https://sybiltec.com/images/star.png">
                         </div>
                         <p>I would highly recommend Sybil; she listens and completely understands what I am asking for. Her knowledge of Shopify is excellent and she knows how to implement what I need.</p>
                     </div>
