--- a/website-design.html
+++ b/website-design.html
@@ -218,6 +218,50 @@ permalink: /website-design/
                     </div>
                 </div>
 
+                <div id="fortis-dpc" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Fortis DPC (Data Protection Compliance)">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>Fortis DPC</h2>
+                            <h3 style="font-size: 18px;">Delivering complete cyber security and data protection compliance solutions</h3>
+                            <p>We redesigned Fortis DPC's website to give it a brand new look which upholds the company's values of strength, security and trust. Services provided:</p>
+                            <ul>
+                                <li>Website redesign</li>
+                                <li>WooCommerce integration</li>
+                                <li>Google Search Console submission</li>
+                                <li>Google Analytics setup</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://fortis-dpc.com/"
+                                target="_blank" rel="noopener noreferrer">Fortis DPC >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="techwomen4boards" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/techwomen4boards.jpg" alt="TechWomen4Boards">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>TechWomen4Boards</h2>
+                            <h3 style="font-size: 18px;">Helping women to achieve boardroom excellence through training, mentoring and networking</h3>
+                            <ul>
+                                <li>Website design</li>
+                                <li>Google Search Console submission</li>
+                                <li>Google Analytics setup</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://techwomen4boards.co.uk/"
+                                target="_blank" rel="noopener noreferrer">TechWomen4Boards >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
