--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -205,6 +205,29 @@ permalink: /web-design-surrey/
                 <h2>Web Design Clients in Surrey</h2>
                 <p>We have worked with charities and small businesses in Surrey to help improve their websites and online presence. Below are some examples.</p>
 
+                <div id="fortis-dpc" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Fortis DPC (Data Protection Compliance)">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>Fortis DPC</h2>
+                            <h3 style="font-size: 18px;">Delivering complete cyber security and data protection compliance solutions</h3>
+                            <p>We redesigned Fortis DPC's website to give it a brand new look which upholds the company's values of strength, security and trust. Services provided:</p>
+                            <ul>
+                                <li>Website redesign</li>
+                                <li>WooCommerce integration</li>
+                                <li>Google Search Console submission</li>
+                                <li>Google Analytics setup</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://fortis-dpc.com/"
+                                target="_blank" rel="noopener noreferrer">Fortis DPC >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
@@ -222,7 +245,7 @@ permalink: /web-design-surrey/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
-                                target="_blank" rel="noopener noreferrer">View New Haw Community Centre >></a>
+                                target="_blank" rel="noopener noreferrer">New Haw Community Centre >></a>
                             </div>
                         </div>
                     </div>
@@ -246,7 +269,7 @@ permalink: /web-design-surrey/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://crazythumbs.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View Crazy Thumbs >></a>
+                                target="_blank" rel="noopener noreferrer">Crazy Thumbs >></a>
                             </div>
                         </div>
                     </div>
@@ -271,7 +294,7 @@ permalink: /web-design-surrey/
                             </ul>        
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
-                                target="_blank" rel="noopener noreferrer">View The GDPR Compliance Consultancy >></a>
+                                target="_blank" rel="noopener noreferrer">The GDPR Compliance Consultancy >></a>
                             </div>
                         </div>
                     </div>
