Add RGB workshops blog

--- a/blog.html
+++ b/blog.html
@@ -166,10 +166,16 @@ permalink: /blog/
                         Sybiltec's Blog
                     </li>
                 </ol>
-                <h2>Thriving Through Change: Smart Website Strategies for Small Business Success</h2>
-                <p>In the digital age, a well-optimised website is more than just a business card; it's a powerful tool to ensure the success and resilience of your business during uncertain times. We explore the critical strategies that can transform your website into a robust platform for growth. …</p>
+                <h2>Free Workshops for Greenwich Borough</h2>
+                <p>We are pleased to be running a new series of free workshops for businesses and organisations based in the Royal Borough of Greenwich. Attend our workshops to learn the vital skills and strategies you need to succeed. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Explore Website Strategies >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/free-workshops-greenwich-borough/">Register Now >></a>
+                <div class="padding-top">
+                    <h2>Thriving Through Change: Smart Website Strategies for Small Business Success</h2>
+                    <p>In the digital age, a well-optimised website is more than just a business card; it's a powerful tool to ensure the success and resilience of your business during uncertain times. We explore the critical strategies that can transform your website into a robust platform for growth. …</p>
+                        <br>
+                        <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Explore Website Strategies >></a>
+                </div>
                 <div class="padding-top">
                     <h2>A Quick Guide to Website Compliance</h2>
                     <p>Is your website compliant? As a business owner, there are certain legal requirements that your website must meet. In this article, we discuss accessibility regulations (WCAG), data protection regulations (GDPR) and other UK laws. …</p>
