--- a/index.html
+++ b/index.html
@@ -279,6 +279,18 @@
                 <div class="row">
                     <div class="col-3"> 
                         <div class="blog-card">   
+                            <a href="https://sybiltec.com/free-workshops-greenwich-borough/">
+                                <img src="https://sybiltec.comimages/logos/royal-borough-greenwich.svg" 
+                                alt="Royal Borough of Greenwich"></a>
+                            <div class="blog-card-text">                    
+                                <a href="https://sybiltec.com/free-workshops-greenwich-borough/" class="blog-title">Free Workshops for Greenwich Borough</a>
+                                <p>11 July 2024</p>
+                                <p>Attend our free workshops and webinars to help you learn vital skills and strategies for your business or organisation.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3"> 
+                        <div class="blog-card">   
                             <a href="https://sybiltec.com/strategies-for-business-success/">
                                 <img src="https://sybiltec.com/images/black-lady-working-laptop-her-office-400x209.jpg" 
                                 alt="Black lady working on a laptop in her office"></a>
@@ -306,18 +318,6 @@
                                 <a href="https://sybiltec.com/cyber-security-best-practices-for-business/" class="blog-title">Cyber Security Best Practices for Business</a>
                                 <p>19 May 2024</p>
                                 <p>Cyber security is a top priority for your organisation. Read our guide on how to stay protected.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3"> 
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">
-                                <img src="https://sybiltec.com/images/white-and-blue-analogue-tachometer-gauge.jpg" 
-                                alt="White and blue analogue tachometer gauge"></a>
-                            <div class="blog-card-text">                    
-                                <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/" class="blog-title">8 Ways to Speed Up Your Windows PC</a>
-                                <p>17 April 2024</p>
-                                <p>Are you suffering from a slow PC? Read our latest post on how to make your computer or laptop run faster.</p>
                             </div>
                         </div>
                     </div>
