--- a/sitemap.html
+++ b/sitemap.html
@@ -206,6 +206,7 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/website-compliance-quick-guide/">A Quick Guide to Website Compliance</a></li>
                     <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Are You Inadvertently Abusing Your Customers' Data?</a></li>
                     <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business/">Cyber Security Best Practices for You and Your Business</a></li>
+                    <li><a href="https://sybiltec.com/free-workshops-greenwich-borough/">Free Workshops for Greenwich Borough</a></li>
                     <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">How Does a Good Website Showcase Trust?</a></li>
                     <li><a href="https://sybiltec.com/upgrade-google-analytics-4/">How Do I Upgrade to Google Analytics 4?</a></li>
                     <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">How to Backup Your WordPress Website with UpdraftPlus</a></li>
