Update web design screenshots

--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -257,6 +257,24 @@ permalink: /web-design-bexley/
                     </div>
                 </div>
 
+                <div id="lcg-lift-consultancy" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/lcg-lift-consultancy.jpg" alt="LCG Lift Consultancy">
+                        </div>
+                        <div class="col-7">
+                            <h2>LCG Lift Consultancy</h2>
+                            <h3 style="font-size: 18px;">London lift consultants</h3>
+                            <ul>
+                                <li>Website redesign and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                                <li>Cookiebot setup</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="ld-tiling-contractors" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
