--- a/website-design.html
+++ b/website-design.html
@@ -307,10 +307,10 @@ permalink: /website-design/
                 <div id="emrys-consulting" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Emrys-Consulting-4.jpg" alt="Emrys Technology & Consultancy">
+                            <img src="https://sybiltec.com/images/clients/Emrys-Consulting-5.jpg" alt="Emrys Technology & Consultancy">
                         </div>
                         <div class="col-7">
-                            <h2>Emrys Technology & Consultancy</h2>
+                            <h2>Emrys Technology &amp; Consultancy</h2>
                             <h3 style="font-size: 18px;">Global consultancy specialising in Information Technologies, Cyber Security, Data/AI management and Agile Working</h3>
                             <ul>
                                 <li>Website design and development</li>
@@ -321,6 +321,24 @@ permalink: /website-design/
                                 <a class ="btn-secondary" href="https://emrys.group/" 
                                 target="_blank" rel="noopener noreferrer">View Emrys</a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="lcg-lift-consultancy" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/lcg-lift-consultancy.jpg" alt="LCG Lift Consultancy">
+                        </div>
+                        <div class="col-7">
+                            <h2>LCG Lift Consultancy</h2>
+                            <h3 style="font-size: 18px;">London lift consultants</h3>
+                            <ul>
+                                <li>Website redesign and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                                <li>Cookiebot setup</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
