--- a/about.html
+++ b/about.html
@@ -173,9 +173,9 @@ permalink: /about/
                 <h2>About Sybil</h2>
                 <hr class="left-align">
 
-                <p>Thank you for visiting our website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that we've worked with several SMEs from various industry sectors to help them achieve their digital goals. Our main services include <a href="https://sybiltec.com/website-design/">websites for small businesses</a>, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
+                <p>Thank you for visiting our website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that we've worked with several SMEs from various industry sectors to help them achieve their digital goals. Our main services include <a href="https://sybiltec.com/small-business-web-design/">websites for small businesses</a>, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
 
-                <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, which involves designing and building an online portal for the new <a href="https://techdiplomacyacademy.org/" target="_blank" rel="noopener noreferrer">Tech Diplomacy Academy</a> project which has just launched. I am also pleased to be working together with CNT Associates to deliver the Bexley Talking Business programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund. More information can be found on the <a href="https://sybiltec.com/web-design-bexley/">Bexley Web Design</a> page.</p>
+                <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, which involves designing and building an online portal for the new <a href="https://techdiplomacyacademy.org/" target="_blank" rel="noopener noreferrer">Tech Diplomacy Academy</a> project which has just launched. I am also pleased to be working together with CNT Associates to deliver the Bexley Talking Business programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund. More information can be found on the <a href="https://sybiltec.com/website-design/">Bexley Web Design</a> page.</p>
 
                 <p>I graduated in November 2019 from the University of Kent with a Distinction in MSc Computer Science. Previous roles include:</p>
                 <ul>
@@ -310,7 +310,7 @@ permalink: /about/
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Training</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
