--- a/faqs.html
+++ b/faqs.html
@@ -415,7 +415,7 @@ permalink: /faqs/
                 <p>I operate on a remote working basis, so it's possible for us to hold all meetings online. I can meet via Zoom, Google Meet or Microsoft Teams. However, if we are within a travelling distance of each other, I would highly recommend that we meet in person at least for our initial meeting.</p>
 
                 <h3>Can I see examples of your previous work?</h3>
-                <p>Of course, please see the <a href="https://sybiltec.com/website-design/">Website Design</a> page for examples of web design projects I have completed for past clients.</p>
+                <p>Of course, please see the <a href="https://sybiltec.com/small-business-web-design/">Website Design</a> page for examples of web design projects I have completed for past clients.</p>
 
                 <h3>What are your payment terms?</h3>
                 <p>For website design or website development projects, we will ask for a deposit which will be 25-50% of the total cost, depending on the size of the project. The remainder of the payments will be taken throughout the project and upon project completion.</p>
@@ -461,7 +461,7 @@ permalink: /faqs/
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Training</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
