--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -318,7 +318,7 @@ permalink: /fix-slow-wordpress-website/
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Training</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
