--- a/services.html
+++ b/services.html
@@ -173,7 +173,7 @@ permalink: /services/
                         <h3>Small Business Websites</h3>
                         <p>If you are looking to create a website that is as unique as you are, we will design a professional, responsive and user-friendly website that perfectly reflects your brand and style.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-secondary" href="https://sybiltec.com/website-design/">Web Design >></a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/small-business-web-design/">Web Design >></a>   
                         </div>
                         </div>
                     </div>
@@ -261,7 +261,7 @@ permalink: /services/
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Training</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
