--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -265,7 +265,7 @@ permalink: /6-tips-for-surviving-remote-working/
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training/">Training</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
