--- a/sitemap.html
+++ b/sitemap.html
@@ -186,8 +186,8 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></li>
                     <li><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></li>
                     <li><a href="https://sybiltec.com/training/">Training</a></li>
-                    <li><a href="https://sybiltec.com/website-design/">Web Design</a></li>
-                    <li><a href="https://sybiltec.com/web-design-bexley/">Web Design Bexley</a></li>
+                    <li><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></li>
+                    <li><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></li>
                     <li><a href="https://sybiltec.com/web-design-surrey/">Web Design Surrey</a></li>
                     <li><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></li>
                     <li><a href="https://sybiltec.com/website-review/">Website Review</a></li>
@@ -254,8 +254,8 @@ permalink: /sitemap/
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                         <p><a href="https://sybiltec.com/training/">Training</a></p>
-                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/web-design-bexley/">Web Design Bexley</a></p>
+                        <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                     </div>
