--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sybiltec: Web Design for Small Businesses | London Kent Surrey</title>       
-        <meta name="Description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact us for a free consultation.">
+        <title>Sybiltec: Web Design for Small Businesses London Surrey Kent</title>       
+        <meta name="Description" content="Designing websites that make an impact. We support small businesses in London, Surrey, Kent, all across the UK and beyond. Start your project today.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sybiltec: Web Design for Small Businesses | London Kent Surrey" />
-        <meta property="og:description" content="Sybil Mayard of Sybiltec provides web design and development services for small businesses. Shopify, WordPress and Wix. Contact us for a free consultation." />
+        <meta property="og:title" content="Sybiltec: Web Design for Small Businesses London Surrey Kent" />
+        <meta property="og:description" content="Designing websites that make an impact. We support small businesses in London, Surrey, Kent, all across the UK and beyond. Start your project today." />
         <meta property="og:url" content="https://sybiltec.com/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
