Various SEO improvements

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <p><strong><em>Sybil Mayard</em></strong></p>
                     </div>
                     <div class="col-6 center">
-                        <img src="images/sybil-mayard.jpeg">
+                        <img src="images/sybil-mayard.jpeg" alt="Sybil Mayard">
                     </div>
                 </div>
             </div>
