Update web design examples

--- a/website-design.html
+++ b/website-design.html
@@ -309,7 +309,7 @@ permalink: /website-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
-                                target="_blank" rel="noopener noreferrer">Happily Clappily >></a>
+                                target="_blank" rel="noopener noreferrer">Happily Clappily Ever Laughter >></a>
                             </div>
                         </div>
                     </div>
