--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -197,27 +197,6 @@ permalink: /small-business-web-design/
                 <h2>Web Design Clients</h2>
                 <p>Take a look at the examples below of websites I have designed for past clients. All of these clients benefitted from a bespoke website design which allowed the businesses to showcase their products and services at their best.</p>
 
-                <div id="bexley-linkup" class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/bexley-linkup.jpg" alt="Bexley Linkup">
-                        </div>
-                        <div class="col-7">
-                            <h2>Bexley Linkup</h2>
-                            <h3 style="font-size: 18px;">Connecting businesses for success</h3>
-                            <ul>
-                                <li>Website design and development</li>
-                                <li>Google Analytics setup</li>
-                                <li>Google Search Console submission</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://bexleylinkup.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">Bexley Linkup >></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
                 <div id="fortis-dpc" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
@@ -262,6 +241,27 @@ permalink: /small-business-web-design/
                     </div>
                 </div>
 
+                <div id="bexley-linkup" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/bexley-linkup.jpg" alt="Bexley Linkup">
+                        </div>
+                        <div class="col-7">
+                            <h2>Bexley Linkup</h2>
+                            <h3 style="font-size: 18px;">Connecting businesses for success</h3>
+                            <ul>
+                                <li>Website design and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://bexleylinkup.co.uk/" 
+                                target="_blank" rel="noopener noreferrer">Bexley Linkup >></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
@@ -276,7 +276,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
-                                target="_blank" rel="noopener noreferrer">View New Haw Community Centre</a>
+                                target="_blank" rel="noopener noreferrer">New Haw Community Centre >></a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://astonsoflondon.co.uk"
-                                target="_blank" rel="noopener noreferrer">View Astons of London</a>
+                                target="_blank" rel="noopener noreferrer">Astons of London >></a>
                             </div>
                         </div>
                     </div>
@@ -319,7 +319,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://emrys.group/" 
-                                target="_blank" rel="noopener noreferrer">View Emrys</a>
+                                target="_blank" rel="noopener noreferrer">Emrys >></a>
                             </div>
                         </div>
                     </div>
@@ -356,7 +356,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View LD Tiling Contractors</a>
+                                target="_blank" rel="noopener noreferrer">LD Tiling Contractors >></a>
                             </div>
                         </div>
                     </div>
@@ -378,7 +378,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.nerowireart.com/" 
-                                target="_blank" rel="noopener noreferrer">View NeroWireArt</a>
+                                target="_blank" rel="noopener noreferrer">NeroWireArt >></a>
                             </div>
                         </div>
                     </div>
@@ -399,7 +399,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
-                                target="_blank" rel="noopener noreferrer">View Happily Clappily</a>
+                                target="_blank" rel="noopener noreferrer">Happily Clappily Ever Laughter >></a>
                             </div>
                         </div>
                     </div>
@@ -418,7 +418,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.encalife.com/" 
-                                target="_blank" rel="noopener noreferrer">View Encalife</a>
+                                target="_blank" rel="noopener noreferrer">Encalife >></a>
                             </div>
                         </div>
                     </div>
@@ -438,7 +438,7 @@ permalink: /small-business-web-design/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://stm238.wixsite.com/swipsearch"
-                                target="_blank" rel="noopener noreferrer">View SwipSearch</a>
+                                target="_blank" rel="noopener noreferrer">SwipSearch >></a>
                             </div>
                         </div>
                     </div>
