--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -208,12 +208,12 @@ permalink: /web-design-surrey/
                 <div id="fortis-dpc" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Fortis DPC (Data Protection Compliance)">                         
+                            <img src="https://sybiltec.com/images/clients/fortis-dpc.jpg" alt="Website refresh for Fortis DPC (Data Protection Compliance), Downside, Surrey">                         
                         </div>
                         <div class="col-7">
                             <h2>Fortis DPC</h2>
                             <h3 style="font-size: 18px;">Delivering complete cyber security and data protection compliance solutions</h3>
-                            <p>We redesigned Fortis DPC's website to give it a brand new look which upholds the company's values of strength, security and trust. Services provided:</p>
+                            <p>We redesigned Fortis DPC's website with a brand new look and feel which upholds the company's values of strength, security and trust. Services provided:</p>
                             <ul>
                                 <li>Website redesign</li>
                                 <li>WooCommerce integration</li>
@@ -231,7 +231,7 @@ permalink: /web-design-surrey/
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre, Woodham, Surrey">                         
+                            <img src="https://sybiltec.com/images/clients/New-Haw-Community-Centre-3.jpg" alt="Web design for New Haw Community Centre, Woodham, Surrey">                         
                         </div>
                         <div class="col-7">
                             <h2>New Haw Community Centre, Woodham</h2>
@@ -259,6 +259,7 @@ permalink: /web-design-surrey/
                         <div class="col-7">
                             <h2>Crazy Thumbs</h2>
                             <h3 style="font-size: 18px;">Specialising in vintage video games and equipment as well as contemporary titles and trade-ins</h3>
+                            <p>We helped Crazy Thumbs enjoy a seamless transition between operating via their physical store and the online experience. We recommended Shopify as the best choice for their e-commerce channel.</p>
                             <ul>
                                 <li>Shopify store development</li>
                                 <li>Advanced navigation system</li>
@@ -283,7 +284,7 @@ permalink: /web-design-surrey/
                         <div class="col-7">
                             <h2>The GDPR Compliance Consultancy</h2>
                             <h3 style="font-size: 18px;">Compliance, Delivered</h3>
-                            <p>The GDPR Compliance Consultancy required a website refresh and error fixing to improve SEO and traffic to the website. Services provided:</p>
+                            <p>The GDPR Compliance Consultancy required a website refresh and error fixing to improve SEO and increase traffic to the website. Services provided:</p>
                             <ul>
                                 <li>Website refresh</li>
                                 <li>SEO improvements</li>
